--- a/SF-COVID/index.html
+++ b/SF-COVID/index.html
@@ -70,7 +70,7 @@ var deathData = {
 data = [casesData, deathData]
 
 var layout = {
-  title: 'SF COVID-19 New Cases By Day',
+  title: 'SF COVID-19 Confirmed New Cases By Day',
   xaxis: {
     type: 'date',
     title: {
